# SeasonalManagement

./: .gitignore  AGENTS.md  DESIGN.md  Pattern Tuần Linh hoạt.md  ai_agent_analysis.md  architecture.md  code.html  context.md  issues.md  localSeasonSqlStore.test.ts  localSeasonSqlStore.ts  localSeasonStore.ts  rule-regression-tests.cjs  rules.md
.cursor/rules/: Vietnamese.mdc
.github/workflows/: release.yml
.understand-anything/: .understandignore  fingerprints.json  knowledge-graph.json  meta.json  run-dashboard.ps1
.understand-anything/.trash-1782037418/: batches.json  fingerprint-input.json  import-input.json  import-map.json  review.json  scan-raw.json  structure-1.json  structure-10.json  structure-11.json  structure-12.json  structure-13.json  structure-14.json  structure-15.json  structure-16.json  structure-17.json  structure-18.json  structure-19.json  structure-2.json  structure-20.json  structure-3.json  structure-4.json  structure-5.json  structure-6.json  structure-7.json  structure-8.json  structure-9.json  structure-input-1.json  structure-input-10.json  (+18 more)
app/: .firebaserc  .gitignore  README.md  eslint.config.mjs  firebase.json  firestore.indexes.json  firestore.rules  package-lock.json  package.json  supabase.env.example  tailwind.config.ts  tsconfig.json
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  main.rs  native_catchup.rs
app/src-tauri/tests/: native_catchup.rs
docs/: ai-report-export-guide.md  backend-supabase-schema-functions.md  tauri-updater-release.md
(+251 files in other folders)
